--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-VUE_APP_BACKEND_API_URL=https://scardor-api.onrender.com/
+VUE_APP_BACKEND_API_URL=http://localhost:3030
+# VUE_APP_BACKEND_API_URL=https://scardor-api.onrender.com/
 # VUE_APP_BACKEND_API_URL=https://scardor-website.herokuapp.com
 
