--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vueup/vue-quill": "^1.0.1",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "quill": "^1.3.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vue3-carousel": "^0.1.46",
